--- a/To-Do-App-API/appsettings.json
+++ b/To-Do-App-API/appsettings.json
@@ -1,8 +1,15 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-JL502IH;Database=TaskManagementDb;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=true"
+  },
+  "Jwt": {
+    "Key": "ThisIsASecretKeyForJwtAuthenticationAndShouldBeKeptSecure"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
     }
   },
   "AllowedHosts": "*"
