add relevant information

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@
 /.vs/Servicii Web/v17/.wsuo
 /.vs/Servicii Web/CopilotIndices/17.13.441.19478/SemanticSymbols.db
 /.vs/Servicii Web/CopilotIndices/17.13.441.19478/CodeChunks.db
+/To-Do-App-API/appsettings.json
