--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,25 @@
-﻿################################################################################
-# This .gitignore file was automatically created by Microsoft(R) Visual Studio.
-################################################################################
+# .NET build artifacts
+bin/
+obj/
 
-/.vs/Servicii Web/copilot-chat/2b4fd5c3/sessions/de6493a5-ff9e-47bc-aaa3-f980394f250a
-/.vs/Servicii Web/FileContentIndex/595a1890-18bf-40c8-8868-6842c8139269.vsidx
-/.vs/slnx.sqlite
-/.vs/Servicii Web/v17/.wsuo
-/.vs/Servicii Web/CopilotIndices/17.13.441.19478/SemanticSymbols.db
-/.vs/Servicii Web/CopilotIndices/17.13.441.19478/CodeChunks.db
-/To-Do-App-API/appsettings.json
+# User-specific files
+*.user
+*.rsuser
+*.suo
+*.userosscache
+*.sln.docstates
+
+# Logs
+*.log
+
+# Visual Studio Code directories
+.vscode/
+
+# Rider directories
+.idea/
+
+# ASP.NET Scaffolding
+ScaffoldingReadMe.txt
+
+# DotNet user-specific files
+.vs/
