--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -20,10 +20,10 @@ jobs:
         dotnet-version: '8.0.x'
 
     - name: Restore dependencies
-      run: dotnet restore To-Do-App-API/To-Do-App-API.csproj
+      run: dotnet restore To-Do-App-API.csproj
 
     - name: Build API project
-      run: dotnet build To-Do-App-API/To-Do-App-API.csproj --configuration Release --no-restore
+      run: dotnet build To-Do-App-API.csproj --configuration Release --no-restore
 
     - name: Run unit tests
       run: dotnet test To-Do-App-API-Tests/To-Do-App-API-Tests.csproj --no-build --verbosity normal
