--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -26,7 +26,7 @@ jobs:
       run: dotnet build To-Do-App-API.csproj --configuration Release --no-restore
 
     - name: Run unit tests
-      run: dotnet test To-Do-App-API-Tests/To-Do-App-API-Tests.csproj --no-build --verbosity normal
+      run: dotnet test To-Do-App-API-Tests.csproj --no-build --verbosity normal
 
     - name: Publish API (simulate deployment)
       run: |
