--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -24,6 +24,9 @@ jobs:
 
     - name: Build API project
       run: dotnet build To-Do-App-API.csproj --configuration Release --no-restore
+      
+    - name: Build test project
+      run: dotnet build To-Do-App-API-Tests/To-Do-App-API-Tests.csproj --configuration Release
 
     - name: Run unit tests
       run: dotnet test To-Do-App-API-Tests/To-Do-App-API-Tests.csproj --no-build --verbosity normal
